--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 h1 {
     color: blue;
     font-size: 300px;
+
+    text-align: center;
 }
+
+h2 {
+    text-decoration: line-through;
+    font-size: 200px;
+    color: red;
+    text-align: center;
+}
+
